--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"del": "^6.0.0",
 		"gulp": "^4.0.2",
 		"gulp-changed": "^4.0.3",
+		"gulp-cli": "^2.3.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-imagemin": "^8.0.0",
 		"gulp-less": "^5.0.0",
@@ -37,10 +38,14 @@
 		"gulp-sass": "^5.0.0",
 		"gulp-sass-glob": "^1.1.0",
 		"gulp-stylus": "^2.7.0",
+		"gulp-util": "^3.0.8",
 		"postcss": "^8.3.11",
 		"sass": "^1.43.3",
 		"terser-webpack-plugin": "^5.2.4",
 		"webpack": "^5.59.1",
 		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"global": "^4.4.0"
 	}
 }
